# craftos2-plugins

./: .gitignore  Makefile.in  README.md  ccemux.cpp  computronics-tape.cpp  configure  configure.ac  discord.cpp  font.h  glasses.cpp  joystick.cpp  periphemu_lua.cpp  sound.cpp
examples/sound/: soundpiano.lua  tetris_a.lua
